fix tooltip z-index; reduce quest and vendor refresh intervals to 15m; add title notification on quest complete; text changes; add clear filters button on vendor screen

--- a/src/common/components/item/item-tooltip/ItemTooltip.less
+++ b/src/common/components/item/item-tooltip/ItemTooltip.less
@@ -8,6 +8,7 @@
 	color: #fff;
 	padding: 10px;
 	min-width: 192px;
+	z-index: 10000;
 
 	& > div:not(:last-child) {
 		margin-bottom: 10px;
