--- a/src/views/vendor-screen/VendorScreen.less
+++ b/src/views/vendor-screen/VendorScreen.less
@@ -23,6 +23,28 @@
 				align-items: center;
 				height: 64px;
 			}
+
+			&.header {
+				.left {
+					display: flex;
+					align-items: center;
+					padding-left: 35px;
+					flex: 1 0 auto;
+					height: 64px;
+				}
+
+				.right {
+					display: flex;
+					align-items: center;
+					flex: 0 1 auto;
+					padding-right: 29px;
+					height: 64px;
+
+					button {
+						height: 40px;
+					}
+				}
+			}
 		}
 	}
 
